--- a/templates/cloud/bulletin/post-detail.html
+++ b/templates/cloud/bulletin/post-detail.html
@@ -71,9 +71,9 @@
           </tr>
           <tr>
             <th>작성일자</th>
-            <td>{{ post.creation_date }}</td>
+            <td>{{ post.creation_date|date:'Y-m-d' }}</td>
             <th>최근 수정일</th>
-            <td>{{ post.update_date }}</td>
+            <td>{{ post.update_date|date:'Y-m-d' }}</td>
           </tr>
 
         </table>
