--- a/templates/cloud/partials/history_card.html
+++ b/templates/cloud/partials/history_card.html
@@ -10,39 +10,28 @@
       </div>
       <p class="text-muted">{{ log.description }}</p>
     </div>
+
+    {% if log.files %}
     <ul class="profile-document list-unstyled mb-0">
-      {% for f in files %}
-      1
+      {% for f in log.files.all %}
+      <li>
+        <div class="profile-document-list document-list-colored ms-4 d-flex align-items-center mt-2">
+          <div class="icon flex-shrink-0">
+            <i class="uil uil-file"></i>
+          </div>
+          <div class="ms-3">
+            <h6 class="fs-16 mb-0">{{ f.file }}</h6>
+            <p class="text-muted mb-0">{{ f.file.size|filesizeformat }}</p>
+          </div>
+          <div class="ms-auto">
+            <a href="{% static 'images/dark-logo.png' %}" download class="fs-20 text-muted"><i class="uil uil-import"></i></a>
+          </div>
+        </div>
+      </li>
       {% endfor %}
-      <li>
-        <div class="profile-document-list document-list-colored ms-4 d-flex align-items-center mt-2">
-          <div class="icon flex-shrink-0">
-            <i class="uil uil-file"></i>
-          </div>
-          <div class="ms-3">
-            <h6 class="fs-16 mb-0">filename3.pdf</h6>
-            <p class="text-muted mb-0">1.25 MB</p>
-          </div>
-          <div class="ms-auto">
-            <a href="{% static 'images/dark-logo.png' %}" download class="fs-20 text-muted"><i class="uil uil-import"></i></a>
-          </div>
-        </div>
-      </li>
-      <li>
-        <div class="profile-document-list document-list-colored ms-4 d-flex align-items-center mt-2">
-          <div class="icon flex-shrink-0">
-            <i class="uil uil-file"></i>
-          </div>
-          <div class="ms-3">
-            <h6 class="fs-16 mb-0">filename2s.pdf</h6>
-            <p class="text-muted mb-0">1.25 MB</p>
-          </div>
-          <div class="ms-auto">
-            <a href="{% static 'images/dark-logo.png' %}" download class="fs-20 text-muted"><i class="uil uil-import"></i></a>
-          </div>
-        </div>
-      </li>
     </ul>
+    {% endif %}
+
   </div>
 
 </div>
