--- a/templates/kinsdb/BRNC/database.html
+++ b/templates/kinsdb/BRNC/database.html
@@ -28,11 +28,11 @@
     width: initial !important;
   }
 
-  .pill-list input[type="checkbox"] {
+  .pill-list input[type="radio"] {
     display: none;
   }
 
-  .pill-list input[type="checkbox"]:checked+.pill-label {
+  .pill-list input[type="radio"]:checked+.pill-label {
     background-color: var(--bs-blue);
     border: 1px solid var(--bs-blue);
     color: #fff;
@@ -53,11 +53,11 @@
     box-shadow: inset 0 0 2px var(--bs-blue);
   }
 
-  .pill-list input[type="checkbox"]:checked+.pill-label .icon--checkLight {
+  .pill-list input[type="radio"]:checked+.pill-label .icon--checkLight {
     display: inline-block;
   }
 
-  .pill-list input[type="checkbox"]:checked+.pill-label .icon--addLight,
+  .pill-list input[type="radio"]:checked+.pill-label .icon--addLight,
   .pill-label .icon--checkLight,
   .PillList-children {
     display: none;
@@ -147,44 +147,44 @@
           <div class="field p-4">
             <legend class="legend">부문 선택</legend>
 
-            <label class="pill-list" onclick="setImage('방사성폐기물')">
-              <input type="checkbox" name="feature" value="공학적 방벽">
+            <label class="pill-list" onclick="setImage('공학적방벽')">
+              <input type="radio" name="feature" value="공학적 방벽" checked>
               <span class="pill-label">공학적 방벽
                 <span class="icon icon--checkLight icon--smallest"><i class="mdi mdi-check"></i></span>
               </span>
             </label>
-            <label class="pill-list">
-              <input type="checkbox" name="feature" value="방사성폐기물">
+            <label class="pill-list" onclick="setImage('방사성폐기물')">
+              <input type="radio" name="feature" value="방사성폐기물">
               <span class="pill-label">방사성폐기물
                 <span class="icon icon--checkLight icon--smallest"><i class="mdi mdi-check"></i></span>
               </span>
             </label>
-            <label class="pill-list">
-              <input type="checkbox" name="feature" value="부지개발">
+            <label class="pill-list" onclick="setImage('부지개발')">
+              <input type="radio" name="feature" value="부지개발">
               <span class="pill-label">부지개발
                 <span class="icon icon--checkLight icon--smallest"><i class="mdi mdi-check"></i></span>
               </span>
             </label>
-            <label class="pill-list">
-              <input type="checkbox" name="feature" value="부지환경">
+            <label class="pill-list" onclick="setImage('부지환경')">
+              <input type="radio" name="feature" value="부지환경">
               <span class="pill-label">부지환경
                 <span class="icon icon--checkLight icon--smallest"><i class="mdi mdi-check"></i></span>
               </span>
             </label>
-            <label class="pill-list">
-              <input type="checkbox" name="feature" value="안전사례">
+            <label class="pill-list" onclick="setImage('안전사례')">
+              <input type="radio" name="feature" value="안전사례">
               <span class="pill-label">안전사례
                 <span class="icon icon--checkLight icon--smallest"><i class="mdi mdi-check"></i></span>
               </span>
             </label>
-            <label class="pill-list">
-              <input type="checkbox" name="feature" value="처분시설 개발">
+            <label class="pill-list" onclick="setImage('처분시설개발')">
+              <input type="radio" name="feature" value="처분시설개발">
               <span class="pill-label">처분시설 개발
                 <span class="icon icon--checkLight icon--smallest"><i class="mdi mdi-check"></i></span>
               </span>
             </label>
-            <label class="pill-list">
-              <input type="checkbox" name="feature" value="처분안전">
+            <label class="pill-list" onclick="setImage('처분안전')">
+              <input type="radio" name="feature" value="처분안전">
               <span class="pill-label">처분안전
                 <span class="icon icon--checkLight icon--smallest"><i class="mdi mdi-check"></i></span>
               </span>
@@ -194,8 +194,45 @@
       </div>
 
       <script>
-        setImage = function(img) {
-          getElementById('wordcloud').src = "{% static 'images/wordcloud/" + img + ".png' %}"
+        function setImage(img) {
+          var wcurl = ''
+          var nturl = ''
+
+          if (img == '공학적방벽'){
+            wcurl = "{% static 'images/wordcloud/공학적방벽.png' %}";
+            nturl = "{% static 'images/network/공학적방벽.png' %}";
+          }
+          else if(img == '방사성폐기물'){
+            wcurl = "{% static 'images/wordcloud/방사성폐기물.png' %}";
+            nturl = "{% static 'images/network/방사성폐기물.png' %}";
+          }
+          else if(img == '부지개발'){
+            wcurl = "{% static 'images/wordcloud/부지개발.png' %}";
+            nturl = "{% static 'images/network/부지개발.png' %}";
+          }
+          else if(img == '부지환경'){
+            wcurl = "{% static 'images/wordcloud/부지환경.png' %}";
+            nturl = "{% static 'images/network/부지환경.png' %}";
+          }
+          else if(img == '안전사례'){
+            wcurl = "{% static 'images/wordcloud/안전사례.png' %}";
+            nturl = "{% static 'images/network/안전사례.png' %}";
+          }
+          else if(img == '처분시설개발'){
+            wcurl = "{% static 'images/wordcloud/처분시설개발.png' %}";
+            nturl = "{% static 'images/network/처분시설개발.png' %}";
+          }
+          else if(img == '처분안전'){
+            wcurl = "{% static 'images/wordcloud/처분안전.png' %}";
+            nturl = "{% static 'images/network/처분안전.png' %}";
+          }
+
+          // console.log(img);
+          // console.log(sturl);
+
+          document.getElementById('wordcloud').src = wcurl;
+          document.getElementById('network').src = nturl;
+
         }
       </script>
 
@@ -307,15 +344,16 @@
                   <i class="uil uil-clipboard-notes"></i>
                   <select class="form-select" data-trigger name="choices-single-cate" id="choices-single-cate" onchange="changeField(this.value)">
                     <option value="">부문</option>
-                    <option value="처분안전" {% if field == '처분안전' %}selected{% endif %}>처분안전</option>
-                    <option value="부지환경" {% if field == '부지환경' %}selected{% endif %}>부지환경</option>
-                    <option value="천연방벽" {% if field == '천연방벽' %}selected{% endif %}>천연방벽</option>
-                    <option value="공학적방벽" {% if field == '공학적방벽' %}selected{% endif %}>공학적방벽</option>
-                    <option value="방사성폐기물" {% if field == '방사성폐기물' %}selected{% endif %}>방사성폐기물</option>
-                    <option value="부지개발" {% if field == '부지개발' %}selected{% endif %}>부지개발</option>
-                    <option value="URL개발" {% if field == 'URL개발' %}selected{% endif %}>URL 개발</option>
-                    <option value="처분시설개발" {% if field == '처분시설개발' %}selected{% endif %}>처분시설 개발</option>
-                    <option value="안전사례" {% if field == '안전사례' %}selected{% endif %}>안전사례</option>
+                    <option value="Safety Context" {% if field == 'Safety Context' %}selected{% endif %}>1. Safety Context</option>
+                    <option value="처분안전" {% if field == '처분안전' %}selected{% endif %}>2. 처분안전</option>
+                    <option value="부지환경" {% if field == '부지환경' %}selected{% endif %}>3. 부지환경</option>
+                    <option value="천연방벽" {% if field == '천연방벽' %}selected{% endif %}>4. 천연방벽</option>
+                    <option value="공학적방벽" {% if field == '공학적방벽' %}selected{% endif %}>5. 공학적방벽</option>
+                    <option value="방사성폐기물" {% if field == '방사성폐기물' %}selected{% endif %}>6. 방사성폐기물</option>
+                    <option value="부지개발" {% if field == '부지개발' %}selected{% endif %}>7. 부지개발</option>
+                    <option value="URL개발" {% if field == 'URL개발' %}selected{% endif %}>8. URL개발</option>
+                    <option value="처분시설개발" {% if field == '처분시설개발' %}selected{% endif %}>9. 처분시설 개발</option>
+                    <option value="안전사례" {% if field == '안전사례' %}selected{% endif %}>10. 안전사례</option>
                   </select>
                 </div>
               </div>
