--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -47,9 +47,29 @@
       min-height: 100vh;
     }
   </style>
+
 </head>
 
 <body>
+
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $(document).on('keydown', function(e) {
+        if (e.keyCode == 123) {
+          /* F12키 */
+          e.preventDefault();
+          e.returnValue = false;
+        }
+      });
+    });
+
+    document.onmousedown = disableclick;
+    function disableclick(event) {
+      if (event.button == 2) {
+        return false;
+      }
+    }
+  </script>
   <!--start page Loader -->
   <div id="preloader">
     <div id="status">
