--- a/templates/partials/rnd_navbar.html
+++ b/templates/partials/rnd_navbar.html
@@ -5,8 +5,8 @@
 <nav class="navbar navbar-expand-lg fixed-top sticky" id="navbar" style="margin-top:0 !important">
   <div class="container-fluid custom-container">
     <a class="navbar-brand text-dark fw-bold me-auto" href="{% url 'rnd:index'%}">
-      <img src="{% static 'images/kins-logo.png' %}" height="22" alt="" class="logo-light" style="height:30px" />
-      <img src="{% static 'images/KINS_LOGO.png' %}" height="22" alt="" class="logo-dark" style="height:30px" />
+      <img src="{% static 'images/kins-logo.png' %}" height="22" alt="" class="logo-light" />
+      <img src="{% static 'images/KINS_LOGO.png' %}" height="22" alt="" class="logo-dark" />
     </a>
     <div>
       <button class="navbar-toggler me-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-label="Toggle navigation">
